==> zqdesigns/Adventurer_Firm/Adventurer_v_9CCS/Adafruit_SSD1306.cpp <==
#include <stdlib.h>
#include <string.h>
#include "msp430.h"
#include "glcdfont.c"
#include "Adafruit_SSD1306.h"

void Adafruit_SSD1306::ssd1306_command(uint8_t c) { 
  uint8_t control = 0x00;   // Co = 0, D/C = 0
    
  while (UCB0CTLW0 & UCTXSTP);
  UCB0I2CSA = _i2caddr;                         
  UCB0CTLW0 |= UCTXSTT ;              // I2C start
  while(UCB0CTLW0 & UCTXSTT);        // wait till UCTXSTT bit is reset
  UCB0TXBUF = control;         	    //Port Configuration
  while (~UCB0IFG&UCTXIFG0);         // Wait for TX buffer to empty
  UCB0TXBUF = c;
  while (~UCB0IFG&UCTXIFG0);
  UCB0CTLW0 |= UCTXSTP;
}

void Adafruit_SSD1306::ssd1306_data(uint8_t c) {
  uint8_t control = 0x40;   // Co = 0, D/C = 1
  while (UCB0CTLW0 & UCTXSTP);
  UCB0I2CSA = _i2caddr;                         
  UCB0CTLW0 |= UCTXSTT ;              // I2C start
  while(UCB0CTLW0 & UCTXSTT);        // wait till UCTXSTT bit is reset
  UCB0TXBUF = control;         	    //Port Configuration
   while (~UCB0IFG&UCTXIFG0);         // Wait for TX buffer to empty
  UCB0TXBUF = c;
  while (~UCB0IFG&UCTXIFG0);         // Wait for TX buffer to empty
  UCB0CTLW0 |= UCTXSTP;
}

void Adafruit_SSD1306::begin(uint8_t vccstate, uint8_t i2caddr) {
  _i2caddr = i2caddr;

  P1SEL1 |= BIT6+BIT7;
  P1SEL0 &= ~(BIT6+BIT7);

  UCB0CTLW0 = UCSWRST;
  UCB0CTLW0 |= UCMODE_3 + UCMST + UCSYNC + UCSSEL_2 + UCTR;      // I2C master mode Use SMCLK, keep SW reset
  UCB0BRW = 0x0014;                       // 400 kHz
  UCB0I2CSA = _i2caddr;        // address
  UCB0CTLW0 &= ~UCSWRST;
  __delay_cycles(8000000);

  #if defined SSD1306_128_32
    // Init sequence for 128x32 OLED module
    ssd1306_command(SSD1306_DISPLAYOFF);                    // 0xAE
    ssd1306_command(SSD1306_SETDISPLAYCLOCKDIV);            // 0xD5
    ssd1306_command(0x80);                                  // the suggested ratio 0x80
    ssd1306_command(SSD1306_SETMULTIPLEX);                  // 0xA8
    ssd1306_command(0x1F);
    ssd1306_command(SSD1306_SETDISPLAYOFFSET);              // 0xD3
    ssd1306_command(0x0);                                   // no offset
    ssd1306_command(SSD1306_SETSTARTLINE | 0x0);            // line #0
    ssd1306_command(SSD1306_CHARGEPUMP);                    // 0x8D
    if (vccstate == SSD1306_EXTERNALVCC) 
      { ssd1306_command(0x10); }
    else 
      { ssd1306_command(0x14); }
    ssd1306_command(SSD1306_MEMORYMODE);                    // 0x20
    ssd1306_command(0x00);                                  // 0x0 act like ks0108
	ssd1306_command(SSD1306_SEGREMAP | 0x1);
    ssd1306_command(SSD1306_COMSCANDEC);
    ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
    ssd1306_command(0x02);
    ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
    ssd1306_command(0x8F);
    ssd1306_command(SSD1306_SETPRECHARGE);                  // 0xd9
    if (vccstate == SSD1306_EXTERNALVCC) 
      { ssd1306_command(0x22); }
    else 
      { ssd1306_command(0xF1); }
    ssd1306_command(SSD1306_SETVCOMDETECT);                 // 0xDB
    ssd1306_command(0x40);
    ssd1306_command(SSD1306_DISPLAYALLON_RESUME);           // 0xA4
    ssd1306_command(SSD1306_NORMALDISPLAY);                 // 0xA6
  #endif

  #if defined SSD1306_128_64
    // Init sequence for 128x64 OLED module
    ssd1306_command(SSD1306_DISPLAYOFF);                    // 0xAE
    ssd1306_command(SSD1306_SETDISPLAYCLOCKDIV);            // 0xD5
    ssd1306_command(0x80);                                  // the suggested ratio 0x80
    ssd1306_command(SSD1306_SETMULTIPLEX);                  // 0xA8
    ssd1306_command(0x3F);
    ssd1306_command(SSD1306_SETDISPLAYOFFSET);              // 0xD3
    ssd1306_command(0x0);                                   // no offset
    ssd1306_command(SSD1306_SETSTARTLINE | 0x0);            // line #0
    ssd1306_command(SSD1306_CHARGEPUMP);                    // 0x8D
    if (vccstate == SSD1306_EXTERNALVCC) 
      { ssd1306_command(0x10); }
    else 
      { ssd1306_command(0x14); }
    ssd1306_command(SSD1306_MEMORYMODE);                    // 0x20
    ssd1306_command(0x00);                                  // 0x0 act like ks0108
    ssd1306_command(SSD1306_SEGREMAP | 0x1);
    ssd1306_command(SSD1306_COMSCANDEC);
    ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
    ssd1306_command(0x12);
    ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
    if (vccstate == SSD1306_EXTERNALVCC) 
      { ssd1306_command(0x9F); }
    else 
      { ssd1306_command(0xCF); }
    ssd1306_command(SSD1306_SETPRECHARGE);                  // 0xd9
    if (vccstate == SSD1306_EXTERNALVCC) 
      { ssd1306_command(0x22); }
    else 
      { ssd1306_command(0xF1); }
    ssd1306_command(SSD1306_SETVCOMDETECT);                 // 0xDB
    ssd1306_command(0x40);
    ssd1306_command(SSD1306_DISPLAYALLON_RESUME);           // 0xA4
    ssd1306_command(SSD1306_NORMALDISPLAY);                 // 0xA6
  #endif
}

void Adafruit_SSD1306::display() {
  uint16_t MAX;
  
  ssd1306_command(SSD1306_SETLOWCOLUMN | 0x0);  // low col = 0
  ssd1306_command(SSD1306_SETHIGHCOLUMN | 0x0);  // hi col = 0
  ssd1306_command(SSD1306_SETSTARTLINE | 0x0); // line #0
  
  MAX = SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT/8;
  for (uint16_t i=0; i<MAX; i++) {
  // send a bunch of data in one xmission
      while (UCB0CTLW0 & UCTXSTP);
      UCB0I2CSA = _i2caddr;                         
      UCB0CTLW0 |= UCTXSTT ;              // I2C start
      while(UCB0CTLW0 & UCTXSTT);        // wait till UCTXSTT bit is reset
      UCB0TXBUF = 0x40; 
      while (~UCB0IFG&UCTXIFG0);         // Wait for TX buffer to empty
  
      for (uint8_t x=0; x<16; x++) {
	    UCB0TXBUF = buffer[i];
        while (~UCB0IFG&UCTXIFG0);         // Wait for TX buffer to empty
	    i++;
      }
      i--;
      UCB0CTLW0 |= UCTXSTP;
    }
}
